--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             rel="stylesheet"
         />
 
-        <title>Social Media</title>
+        <title>Twatter Social Media</title>
     </head>
     <body class="bg-gray-50">
         <noscript>You need to enable JavaScript to run this app.</noscript>
